// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`basic slash 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude 1`] = `
[
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude 2 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude 3 1`] = `
[
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude 4 1`] = `
[
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude 5 1`] = `[]`;

exports[`exclude 6 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`exclude include 1`] = `
[
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
]
`;

exports[`followSymlinks 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dirsymlink",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": false,
  },
]
`;

exports[`include 1`] = `
[
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`include 2 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir/file",
    "symlink": false,
  },
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dirsymlink",
    "symlink": true,
  },
  {
    "directory": false,
    "path": "test/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/filesymlink",
    "symlink": true,
  },
]
`;

exports[`include 3 1`] = `
[
  {
    "directory": true,
    "path": "test/dir2",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/file",
    "symlink": false,
  },
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
]
`;

exports[`include 4 1`] = `[]`;

exports[`include 5 1`] = `
[
  {
    "directory": true,
    "path": "test/dir",
    "symlink": false,
  },
]
`;

exports[`include 6 1`] = `
[
  {
    "directory": false,
    "path": "test/dir2/exclude.txt",
    "symlink": false,
  },
]
`;

exports[`insensitive 1`] = `
[
  {
    "directory": false,
    "path": "test/dir2/UPPER",
    "symlink": false,
  },
]
`;
